# streamdown-rs

./: CHANGELOG.md  Cargo.toml  README.md
crates/streamdown-ansi/: Cargo.toml  README.md
crates/streamdown-ansi/src/: utils.rs
crates/streamdown-config/: Cargo.toml  README.md
crates/streamdown-core/: Cargo.toml  README.md
crates/streamdown-parser/: Cargo.toml  README.md
crates/streamdown-parser/src/: lib.rs
crates/streamdown-plugin/: Cargo.toml  README.md
crates/streamdown-render/: Cargo.toml  README.md
crates/streamdown-render/src/: code.rs  features.rs  lib.rs  table.rs  text.rs
crates/streamdown-syntax/: Cargo.toml  README.md
examples/: custom_style.rs
src/: cli.rs  main.rs
tests/: integration.rs
tests/snapshots/: snapshots__snapshot_code_block_no_language.snap  snapshots__snapshot_code_block_python.snap  snapshots__snapshot_code_block_rust.snap  snapshots__snapshot_complex_document.snap  snapshots__snapshot_narrow_width.snap
